[metadata]
name = quantile-regression-tf
author = Salvatore Candido
author_email = scandido@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scandido/quantile-regression-tf

[options]
install_requires =
    numpy>=1.0
    tensorflow>=2.0
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src
